src/styles/_mixins.scss
@use '_variables' as *;

// Green Button
// https://css-tricks.com/overriding-default-button-styles/
@mixin green-button {
    display: block;
    padding: 1rem 1.5rem;
    margin: 2rem 1rem;
    text-decoration: none;
    text-transform: uppercase;
    color: white;
    font-size: 1.2rem;
    line-height: 1;
    border: none;
    border-radius: 0.3125rem;
    background-color: $extraDarkGreen;
    filter: drop-shadow(0.125rem 0.125rem 0.125rem darkgrey);
    cursor: pointer;
    text-align: center;
    transition: background-color 250ms ease-in-out, transform 150ms ease;
    -webkit-appearance: none;
    -moz-appearance: none;

    &:hover,
    &:focus {
    background-color: $mediumGreen;
    color: black;
    }

    &:active {
        transform: scale(0.97);
    }
}


// Translucent Button 
@mixin translucent-button {
    
    display: inline-block;
    border: none;
    border-radius: 50%;
    padding: 0.5rem;
    margin: 0.5rem;
    text-decoration: none;
    background: transparent;
    color: black;
    font-size: 1.5rem;
    cursor: pointer;
    text-align: center;
    transition: background 250ms ease-in-out, 
                transform 150ms ease;
    -webkit-appearance: none;
    -moz-appearance: none;
    
    
    &:hover,
    &:focus {
        background: $darktext;
        color: $mediumGreen;
    }
    
    &:active {
        transform: scale(0.99);
        outline: 0.0625rem solid #fff;
        outline-offset: -0.25rem;
    }
}

